add send notif to slack

--- a/.github/workflows/running_cicd.yml
+++ b/.github/workflows/running_cicd.yml
@@ -19,3 +19,7 @@ jobs:
 
       - name : Run test with pytest
         run: pytest test -v
+
+      - name: Send report tp slack
+        run: pytest setting/notif_slack.py
+
