edit add send notif to slack

--- a/.github/workflows/running_cicd.yml
+++ b/.github/workflows/running_cicd.yml
@@ -20,6 +20,8 @@ jobs:
       - name : Run test with pytest
         run: pytest test -v
 
-      - name: Send report tp slack
-        run: pytest setting/notif_slack.py
+      - name: Send report to slack
+          run: pytest setting/notif_slack.py
+          env:
+            PYTEST_WEBHOOK_SLACK: ${{ secrets.WEBHOOK_SLACK }}
 
